--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Transformer.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Nilanshrajput/Video_Generation_Transformer/blob/master/Transformer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -169,8 +158,79 @@
         "colab": {}
       },
       "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AcdR2CAuyw3l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "class MultiHeadAttention(tf.keras.layers.Layer):\n",
-        "  def __init__(self, d_model, num_heads):"
+        "  def __init__(self, d_model, num_heads):\n",
+        "    super(MultiHeadAttention, self).__init__()\n",
+        "    self.num_heads = num_heads\n",
+        "    self.d_model = d_model\n",
+        "    \n",
+        "    assert d_model % self.num_heads == 0\n",
+        "    \n",
+        "    self.depth = d_model // self.num_heads\n",
+        "    \n",
+        "    self.wq = tf.keras.layers.Dense(d_model)\n",
+        "    self.wk = tf.keras.layers.Dense(d_model)\n",
+        "    self.wv = tf.keras.layers.Dense(d_model)\n",
+        "    \n",
+        "    self.dense = tf.keras.layers.Dense(d_model)\n",
+        "        \n",
+        "  def split_heads(self, x, batch_size):\n",
+        "    \"\"\"Split the last dimension into (num_heads, depth).\n",
+        "    Transpose the result such that the shape is (batch_size, num_heads, seq_len, depth)\n",
+        "    \"\"\"\n",
+        "    x = tf.reshape(x, (batch_size, -1, self.num_heads, self.depth))\n",
+        "    return tf.transpose(x, perm=[0, 2, 1, 3])\n",
+        "    \n",
+        "  def call(self, v, k, q, mask):\n",
+        "    batch_size = tf.shape(q)[0]\n",
+        "    \n",
+        "    q = self.wq(q)  # (batch_size, seq_len, d_model)\n",
+        "    k = self.wk(k)  # (batch_size, seq_len, d_model)\n",
+        "    v = self.wv(v)  # (batch_size, seq_len, d_model)\n",
+        "    \n",
+        "    q = self.split_heads(q, batch_size)  # (batch_size, num_heads, seq_len_q, depth)\n",
+        "    k = self.split_heads(k, batch_size)  # (batch_size, num_heads, seq_len_k, depth)\n",
+        "    v = self.split_heads(v, batch_size)  # (batch_size, num_heads, seq_len_v, depth)\n",
+        "    \n",
+        "    # scaled_attention.shape == (batch_size, num_heads, seq_len_q, depth)\n",
+        "    # attention_weights.shape == (batch_size, num_heads, seq_len_q, seq_len_k)\n",
+        "    scaled_attention, attention_weights = scaled_dot_product_attention(\n",
+        "        q, k, v, mask)\n",
+        "    \n",
+        "    scaled_attention = tf.transpose(scaled_attention, perm=[0, 2, 1, 3])  # (batch_size, seq_len_q, num_heads, depth)\n",
+        "\n",
+        "    concat_attention = tf.reshape(scaled_attention, \n",
+        "                                  (batch_size, -1, self.d_model))  # (batch_size, seq_len_q, d_model)\n",
+        "\n",
+        "    output = self.dense(concat_attention)  # (batch_size, seq_len_q, d_model)\n",
+        "        \n",
+        "    return output, attention_weights"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eLLo9lsUy6w6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
