--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -230,7 +230,11 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def point_wise_feed_forward_network(d_model, dff):\n",
+        "  return tf.keras.Sequential([\n",
+        "      tf.keras.layers.Dense(dff, activation='relu'),  # (batch_size, seq_len, dff)\n",
+        "      tf.keras.layers.Dense(d_model)  # (batch_size, seq_len, d_model)\n",
+        "  ])"
       ],
       "execution_count": 0,
       "outputs": []
