--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Transformer.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nilanshrajput/Video_Generation_Transformer/blob/master/Transformer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -235,6 +246,240 @@
         "      tf.keras.layers.Dense(dff, activation='relu'),  # (batch_size, seq_len, dff)\n",
         "      tf.keras.layers.Dense(d_model)  # (batch_size, seq_len, d_model)\n",
         "  ])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WX4MCTzzzk4X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "class EncoderLayer(tf.keras.layers.Layer):\n",
+        "  def __init__(self, d_model, num_heads, dff, rate=0.1):\n",
+        "    super(EncoderLayer, self).__init__()\n",
+        "\n",
+        "    self.mha = MultiHeadAttention(d_model, num_heads)\n",
+        "    self.ffn = point_wise_feed_forward_network(d_model, dff)\n",
+        "\n",
+        "    self.layernorm1 = tf.keras.layers.LayerNormalization(epsilon=1e-6)\n",
+        "    self.layernorm2 = tf.keras.layers.LayerNormalization(epsilon=1e-6)\n",
+        "    \n",
+        "    self.dropout1 = tf.keras.layers.Dropout(rate)\n",
+        "    self.dropout2 = tf.keras.layers.Dropout(rate)\n",
+        "    \n",
+        "  def call(self, x, training, mask):\n",
+        "\n",
+        "    attn_output, _ = self.mha(x, x, x, mask)  # (batch_size, input_seq_len, d_model)\n",
+        "    attn_output = self.dropout1(attn_output, training=training)\n",
+        "    out1 = self.layernorm1(x + attn_output)  # (batch_size, input_seq_len, d_model)\n",
+        "    \n",
+        "    ffn_output = self.ffn(out1)  # (batch_size, input_seq_len, d_model)\n",
+        "    ffn_output = self.dropout2(ffn_output, training=training)\n",
+        "    out2 = self.layernorm2(out1 + ffn_output)  # (batch_size, input_seq_len, d_model)\n",
+        "    \n",
+        "    return out2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uLmUyM_oztWT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class DecoderLayer(tf.keras.layers.Layer):\n",
+        "  def __init__(self, d_model, num_heads, dff, rate=0.1):\n",
+        "    super(DecoderLayer, self).__init__()\n",
+        "\n",
+        "    self.mha1 = MultiHeadAttention(d_model, num_heads)\n",
+        "    self.mha2 = MultiHeadAttention(d_model, num_heads)\n",
+        "\n",
+        "    self.ffn = point_wise_feed_forward_network(d_model, dff)\n",
+        " \n",
+        "    self.layernorm1 = tf.keras.layers.LayerNormalization(epsilon=1e-6)\n",
+        "    self.layernorm2 = tf.keras.layers.LayerNormalization(epsilon=1e-6)\n",
+        "    self.layernorm3 = tf.keras.layers.LayerNormalization(epsilon=1e-6)\n",
+        "    \n",
+        "    self.dropout1 = tf.keras.layers.Dropout(rate)\n",
+        "    self.dropout2 = tf.keras.layers.Dropout(rate)\n",
+        "    self.dropout3 = tf.keras.layers.Dropout(rate)\n",
+        "    \n",
+        "    \n",
+        "  def call(self, x, enc_output, training, \n",
+        "           look_ahead_mask, padding_mask):\n",
+        "    # enc_output.shape == (batch_size, input_seq_len, d_model)\n",
+        "\n",
+        "    attn1, attn_weights_block1 = self.mha1(x, x, x, look_ahead_mask)  # (batch_size, target_seq_len, d_model)\n",
+        "    attn1 = self.dropout1(attn1, training=training)\n",
+        "    out1 = self.layernorm1(attn1 + x)\n",
+        "    \n",
+        "    attn2, attn_weights_block2 = self.mha2(\n",
+        "        enc_output, enc_output, out1, padding_mask)  # (batch_size, target_seq_len, d_model)\n",
+        "    attn2 = self.dropout2(attn2, training=training)\n",
+        "    out2 = self.layernorm2(attn2 + out1)  # (batch_size, target_seq_len, d_model)\n",
+        "    \n",
+        "    ffn_output = self.ffn(out2)  # (batch_size, target_seq_len, d_model)\n",
+        "    ffn_output = self.dropout3(ffn_output, training=training)\n",
+        "    out3 = self.layernorm3(ffn_output + out2)  # (batch_size, target_seq_len, d_model)\n",
+        "    \n",
+        "    return out3, attn_weights_block1, attn_weights_block2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FXJYy37J0hVt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\"\"\"\"\n",
+        "  1 block of encoder layer\n",
+        "    in paper they used 6 of these sets, \n",
+        "    same input,output shape\n",
+        "\n",
+        "\"\"\"\"\n",
+        "\n",
+        "class Encoder(tf.keras.layers.Layer):\n",
+        "  def __init__(self, num_layers, d_model, num_heads, dff, input_vocab_size, \n",
+        "               rate=0.1):\n",
+        "    super(Encoder, self).__init__()\n",
+        "\n",
+        "    self.d_model = d_model\n",
+        "    self.num_layers = num_layers\n",
+        "    \n",
+        "    self.embedding = tf.keras.layers.Embedding(input_vocab_size, d_model)\n",
+        "    self.pos_encoding = positional_encoding(input_vocab_size, self.d_model)\n",
+        "    \n",
+        "    \n",
+        "    self.enc_layers = [EncoderLayer(d_model, num_heads, dff, rate) \n",
+        "                       for _ in range(num_layers)]\n",
+        "  \n",
+        "    self.dropout = tf.keras.layers.Dropout(rate)\n",
+        "        \n",
+        "  def call(self, x, training, mask):\n",
+        "\n",
+        "    seq_len = tf.shape(x)[1]\n",
+        "    \n",
+        "    # adding embedding and position encoding.\n",
+        "    x = self.embedding(x)  # (batch_size, input_seq_len, d_model)\n",
+        "    x *= tf.math.sqrt(tf.cast(self.d_model, tf.float32))\n",
+        "    x += self.pos_encoding[:, :seq_len, :]\n",
+        "\n",
+        "    x = self.dropout(x, training=training)\n",
+        "    \n",
+        "    for i in range(self.num_layers):\n",
+        "      x = self.enc_layers[i](x, training, mask)\n",
+        "    \n",
+        "    return x  # (batch_size, input_seq_len, d_model)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dFmMJ8JY0veN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Decoder(tf.keras.layers.Layer):\n",
+        "  def __init__(self, num_layers, d_model, num_heads, dff, target_vocab_size, \n",
+        "               rate=0.1):\n",
+        "    super(Decoder, self).__init__()\n",
+        "\n",
+        "    self.d_model = d_model\n",
+        "    self.num_layers = num_layers\n",
+        "    \n",
+        "    self.embedding = tf.keras.layers.Embedding(target_vocab_size, d_model)\n",
+        "    self.pos_encoding = positional_encoding(target_vocab_size, self.d_model)\n",
+        "    \n",
+        "    self.dec_layers = [DecoderLayer(d_model, num_heads, dff, rate) \n",
+        "                       for _ in range(num_layers)]\n",
+        "    self.dropout = tf.keras.layers.Dropout(rate)\n",
+        "    \n",
+        "  def call(self, x, enc_output, training, \n",
+        "           look_ahead_mask, padding_mask):\n",
+        "\n",
+        "    seq_len = tf.shape(x)[1]\n",
+        "    attention_weights = {}\n",
+        "    \n",
+        "    x = self.embedding(x)  # (batch_size, target_seq_len, d_model)\n",
+        "    x *= tf.math.sqrt(tf.cast(self.d_model, tf.float32))\n",
+        "    x += self.pos_encoding[:, :seq_len, :]\n",
+        "    \n",
+        "    x = self.dropout(x, training=training)\n",
+        "\n",
+        "    for i in range(self.num_layers):\n",
+        "      x, block1, block2 = self.dec_layers[i](x, enc_output, training,\n",
+        "                                             look_ahead_mask, padding_mask)\n",
+        "      \n",
+        "      attention_weights['decoder_layer{}_block1'.format(i+1)] = block1\n",
+        "      attention_weights['decoder_layer{}_block2'.format(i+1)] = block2\n",
+        "    \n",
+        "    # x.shape == (batch_size, target_seq_len, d_model)\n",
+        "    return x, attention_weights"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CCrZd8wF0vg5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Transformer(tf.keras.Model):\n",
+        "  def __init__(self, num_layers, d_model, num_heads, dff, input_vocab_size, \n",
+        "               target_vocab_size, rate=0.1):\n",
+        "    super(Transformer, self).__init__()\n",
+        "\n",
+        "    self.encoder = Encoder(num_layers, d_model, num_heads, dff, \n",
+        "                           input_vocab_size, rate)\n",
+        "\n",
+        "    self.decoder = Decoder(num_layers, d_model, num_heads, dff, \n",
+        "                           target_vocab_size, rate)\n",
+        "\n",
+        "    self.final_layer = tf.keras.layers.Dense(target_vocab_size)\n",
+        "    \n",
+        "  def call(self, inp, tar, training, enc_padding_mask, \n",
+        "           look_ahead_mask, dec_padding_mask):\n",
+        "\n",
+        "    enc_output = self.encoder(inp, training, enc_padding_mask)  # (batch_size, inp_seq_len, d_model)\n",
+        "    \n",
+        "    # dec_output.shape == (batch_size, tar_seq_len, d_model)\n",
+        "    dec_output, attention_weights = self.decoder(\n",
+        "        tar, enc_output, training, look_ahead_mask, dec_padding_mask)\n",
+        "    \n",
+        "    final_output = self.final_layer(dec_output)  # (batch_size, tar_seq_len, target_vocab_size)\n",
+        "    \n",
+        "    return final_output, attention_weights"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "410AkQhf0vly",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
