--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -479,7 +479,72 @@
         "colab": {}
       },
       "source": [
-        ""
+        "num_layers = 4\n",
+        "d_model = 128\n",
+        "dff = 512\n",
+        "num_heads = 8\n",
+        "\n",
+        "input_vocab_size = tokenizer_pt.vocab_size + 2 \n",
+        "target_vocab_size = tokenizer_en.vocab_size + 2\n",
+        "dropout_rate = 0.1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i0ncW8X_1hqA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#https://www.tensorflow.org/beta/tutorials/text/transformer#optimizer\n",
+        "\n",
+        "class CustomSchedule(tf.keras.optimizers.schedules.LearningRateSchedule):\n",
+        "  def __init__(self, d_model, warmup_steps=4000):\n",
+        "    super(CustomSchedule, self).__init__()\n",
+        "    \n",
+        "    self.d_model = d_model\n",
+        "    self.d_model = tf.cast(self.d_model, tf.float32)\n",
+        "\n",
+        "    self.warmup_steps = warmup_steps\n",
+        "    \n",
+        "  def __call__(self, step):\n",
+        "    arg1 = tf.math.rsqrt(step)\n",
+        "    arg2 = step * (self.warmup_steps ** -1.5)\n",
+        "    \n",
+        "    return tf.math.rsqrt(self.d_model) * tf.math.minimum(arg1, arg2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QJdQUtlK1t2j",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "learning_rate = CustomSchedule(d_model)\n",
+        "\n",
+        "optimizer = tf.keras.optimizers.Adam(learning_rate, beta_1=0.9, beta_2=0.98, \n",
+        "                                     epsilon=1e-9)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e1q9Lhbm1yC7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "loss_object = tf.keras.losses.SparseCategoricalCrossentropy(\n",
+        "    from_logits=True, reduction='none')"
       ],
       "execution_count": 0,
       "outputs": []
