Model, loss, training loop defined

--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -548,6 +548,185 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UwniSFo314UT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def loss_function(real, pred):\n",
+        "  mask = tf.math.logical_not(tf.math.equal(real, 0))\n",
+        "  loss_ = loss_object(real, pred)\n",
+        "\n",
+        "  mask = tf.cast(mask, dtype=loss_.dtype)\n",
+        "  loss_ *= mask\n",
+        "  \n",
+        "  return tf.reduce_mean(loss_)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lSpPm_H_2DLM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "transformer = Transformer(num_layers, d_model, num_heads, dff,\n",
+        "                          input_vocab_size, target_vocab_size, dropout_rate)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1FAavbGW2FIe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def create_masks(inp, tar):\n",
+        "  # Encoder padding mask\n",
+        "  enc_padding_mask = create_padding_mask(inp)\n",
+        "  \n",
+        "  # Used in the 2nd attention block in the decoder.\n",
+        "  # This padding mask is used to mask the encoder outputs.\n",
+        "  dec_padding_mask = create_padding_mask(inp)\n",
+        "  \n",
+        "  # Used in the 1st attention block in the decoder.\n",
+        "  # It is used to pad and mask future tokens in the input received by \n",
+        "  # the decoder.\n",
+        "  look_ahead_mask = create_look_ahead_mask(tf.shape(tar)[1])\n",
+        "  dec_target_padding_mask = create_padding_mask(tar)\n",
+        "  combined_mask = tf.maximum(dec_target_padding_mask, look_ahead_mask)\n",
+        "  \n",
+        "  return enc_padding_mask, combined_mask, dec_padding_mask"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LpDiYpKO8QaX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "checkpoint_path = \"./checkpoints/train\"\n",
+        "\n",
+        "ckpt = tf.train.Checkpoint(transformer=transformer,\n",
+        "                           optimizer=optimizer)\n",
+        "\n",
+        "ckpt_manager = tf.train.CheckpointManager(ckpt, checkpoint_path, max_to_keep=5)\n",
+        "\n",
+        "# if a checkpoint exists, restore the latest checkpoint.\n",
+        "if ckpt_manager.latest_checkpoint:\n",
+        "  ckpt.restore(ckpt_manager.latest_checkpoint)\n",
+        "  print ('Latest checkpoint restored!!')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G7pAHY-48RF6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "@tf.function\n",
+        "def train_step(inp, tar):\n",
+        "  tar_inp = tar[:, :-1]\n",
+        "  tar_real = tar[:, 1:]\n",
+        "  \n",
+        "  enc_padding_mask, combined_mask, dec_padding_mask = create_masks(inp, tar_inp)\n",
+        "  \n",
+        "  with tf.GradientTape() as tape:\n",
+        "    predictions, _ = transformer(inp, tar_inp, \n",
+        "                                 True, \n",
+        "                                 enc_padding_mask, \n",
+        "                                 combined_mask, \n",
+        "                                 dec_padding_mask)\n",
+        "    loss = loss_function(tar_real, predictions)\n",
+        "\n",
+        "  gradients = tape.gradient(loss, transformer.trainable_variables)    \n",
+        "  optimizer.apply_gradients(zip(gradients, transformer.trainable_variables))\n",
+        "  \n",
+        "  train_loss(loss)\n",
+        "  train_accuracy(tar_real, predictions)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0c3IfoTs8UW6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for epoch in range(EPOCHS):\n",
+        "  start = time.time()\n",
+        "  \n",
+        "  train_loss.reset_states()\n",
+        "  train_accuracy.reset_states()\n",
+        "  \n",
+        "  # inp -> portuguese, tar -> english\n",
+        "  for (batch, (inp, tar)) in enumerate(train_dataset):\n",
+        "    train_step(inp, tar)\n",
+        "    \n",
+        "    if batch % 500 == 0:\n",
+        "      print ('Epoch {} Batch {} Loss {:.4f} Accuracy {:.4f}'.format(\n",
+        "          epoch + 1, batch, train_loss.result(), train_accuracy.result()))\n",
+        "      \n",
+        "  if (epoch + 1) % 5 == 0:\n",
+        "    ckpt_save_path = ckpt_manager.save()\n",
+        "    print ('Saving checkpoint for epoch {} at {}'.format(epoch+1,\n",
+        "                                                         ckpt_save_path))\n",
+        "    \n",
+        "  print ('Epoch {} Loss {:.4f} Accuracy {:.4f}'.format(epoch + 1, \n",
+        "                                                train_loss.result(), \n",
+        "                                                train_accuracy.result()))\n",
+        "\n",
+        "  print ('Time taken for 1 epoch: {} secs\\n'.format(time.time() - start))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "23MikMnv8Ufh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LjajLLcW8Usc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
