enoder-resnet-layer-activation-47

--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -742,7 +742,7 @@
       "source": [
         "!wget --header=\"Host: storage.googleapis.com\" --header=\"User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36\" --header=\"Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3\" --header=\"Accept-Language: en-GB,en-US;q=0.9,en;q=0.8\" --header=\"Referer: https://sites.google.com/site/brainrobotdata/home/bike-video-dataset\" \"https://storage.googleapis.com/brain-robotics-data/bike/BikeVideoDataset.tar\" -O \"BikeVideoDataset.tar\" -c"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,6 +954,41 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2hQRjtND4F_X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def encoder_trans(img):\n",
+        "    IMG_SIZE=256\n",
+        "    IMG_SHAPE = (IMG_SIZE, IMG_SIZE, 3)\n",
+        "    base_model = tf.keras.applications.ResNet50(input_shape=IMG_SHAPE,\n",
+        "                                               include_top=False,\n",
+        "                                               weights='imagenet')\n",
+        "\n",
+        "    model = Model(inputs=base_model.input, outputs=base_model.get_layer('activation_47').output)\n",
+        "                                               \n",
+        "    img=preprocess_img(img)\n",
+        "    feats=model.predict(img)\n",
+        "\n",
+        "    return feats"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EqJgRa-K4FYv",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
