Rough network structure image

--- a/plan_updates.ipynb
+++ b/plan_updates.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.Pyramid network based gan for each frame reconstruction\n",
-    "2. Structural integrity - edge training ("
+    "1.Pyramid network based gan for each frame reconstruction(sinGan)\n",
+    "2. Structural integrity - edge training (Nvidia paper iccv2019, on segmentaion)"
    ]
   },
   {
