input normalization removed, induce wrong features for reconstruction

--- a/final.ipynb
+++ b/final.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,28 +106,34 @@
     "    # Based on https://github.com/mcordts/cityscapesScripts\n",
     "  \n",
     "\n",
-    "    def __init__(self, root, split='train_extra', transforms=None):\n",
-    "        super(Cityscapes, self).__init__(root, transforms, transform)\n",
-    "        self.images_dir = os.path.join(self.root, 'leftImg8bit', split)\n",
+    "    def __init__(self, root=None, split='train_extra', transforms=None):\n",
+    "        if root is not None:\n",
+    "          self.images_dir = os.path.join(self.root, 'leftImg8bit', split)\n",
+    "        else:\n",
+    "          self.images_dir = os.path.join('leftImg8bit', split)\n",
     "        self.split = split\n",
     "        self.images = []\n",
-    "        self.targets = []\n",
-    "\n",
+    "        self.root = root\n",
+    "        self.transforms = transforms\n",
+    "  \n",
+    "        #valid_modes = (\"train\", \"train_extra\", \"val\")\n",
     "        \n",
-    "        valid_modes = (\"train\", \"train_extra\", \"val\")\n",
-    "\n",
-    "        \n",
-    "        for city in os.listdir(images_dir):\n",
-    "            img_dir = os.path.join(images_dir, city)\n",
+    "        for city in os.listdir(self.images_dir):\n",
+    "            img_dir = os.path.join(self.images_dir, city)\n",
     "            images_city=[]\n",
     "            for file_name in os.listdir(img_dir):\n",
     "                \n",
     "                images_city.append(os.path.join(img_dir, file_name))\n",
     "            # re.split(\\d+,input) splits by integer value\n",
     "            images_city.sort( key= lambda text: int(re.split('(\\d+)',text)[3]+re.split('(\\d+)',text) [5] ))\n",
-    "            images.append(images_city)\n",
-    "                \n",
-    "[docs]    def __getitem__(self, index):\n",
+    "            self.images+=images_city\n",
+    "        \n",
+    "    def print_dir(self):\n",
+    "      print(self.images)\n",
+    "\n",
+    "    def im_path(self):\n",
+    "      return self.images            \n",
+    "    def __getitem__(self, index):\n",
     "        \"\"\"\n",
     "        Args:\n",
     "            index (int): Index\n",
@@ -149,62 +155,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "scaler = transforms.Resize((224, 224))\n",
-    "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                                 std=[0.229, 0.224, 0.225])\n",
     "to_tensor = transforms.ToTensor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "composed_transforms=transforms.Compose([transforms.Resize((224, 224)),                              transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                                 std=[0.229, 0.224, 0.225]),                                        transforms.ToTensor()])"
+    "#not adding normalization as image looses textures and clrs for recostrucyion\n",
+    "\n",
+    "composed_transforms=transforms.Compose([scaler,to_tensor])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'images_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-70-c120d0f4a250>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m transformed_dataset = CityscapeDataset(\n\u001b[1;32m----> 2\u001b[1;33m                                            \u001b[0mtransforms\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcomposed_transforms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m                                            )\n",
+      "\u001b[1;32m<ipython-input-65-a5fb526db100>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, root, split, transforms)\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[1;31m#valid_modes = (\"train\", \"train_extra\", \"val\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mcity\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages_dir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m             \u001b[0mimg_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages_dir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcity\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m             \u001b[0mimages_city\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'images_dir' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "transformed_dataset = CityscapeDataset(\n",
+    "                                           transforms=composed_transforms\n",
+    "                                           )"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'transformed_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-71-d5edcec8d290>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m dataloader = DataLoader(transformed_dataset, batch_size=4,\n\u001b[0m\u001b[0;32m      2\u001b[0m                         shuffle=True, num_workers=4)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'transformed_dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dataloader = DataLoader(transformed_dataset, batch_size=4,\n",
-    "                        shuffle=True, num_workers=4)"
+    "                        sampler=torch.utils.data.SequentialSampler(transformed_dataset) , num_workers=4)"
    ]
   },
   {
@@ -212,14 +225,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "images=transformed_dataset.im_path()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "for i, batch in enumerate(dataloader):\n",
+    "        print(i, batch[1].shape)\n",
+    "        w=10\n",
+    "        h=10\n",
+    "        fig=plt.figure(figsize=(8, 8))\n",
+    "        columns = 1\n",
+    "        rows = 4\n",
+    "        for i,img in enumerate(batch):\n",
+    "            img= (transforms.ToPILImage()(img))\n",
+    "            img=np.clip(img,0,255)\n",
+    "            #img=np.array(img)\n",
+    "            #print(img)\n",
+    "            fig.add_subplot(rows, columns, i+1)\n",
+    "            plt.imshow(img)\n",
+    "            \n",
+    "        plt.show()\n",
+    "\n",
+    "        break"
+   ]
   }
  ]
 }
